fix cards overflowing canvas

--- a/src/components/FlowSheet.tsx/FlowSheet.scss
+++ b/src/components/FlowSheet.tsx/FlowSheet.scss
@@ -1,5 +1,7 @@
 .flow-sheet{
-    // position: relative;
-    // width: 100%;
-    // height: 100%;
+    position: relative;
+    overflow: hidden;
+    background-color: rgb(204, 247, 233);
+    width: 100%;
+    height: 100%;
 }
